src/myProducts.Web/app/content/css/app.css
html {
    height: 100%;
    width: 100%;
}

body {
    height: 100%;
    overflow: scroll;
    background-color: #F0F0F0;
}

h1 {
    font-size: 40px;
}

h2 {
    font-size: 20px;
    margin-bottom: 10px;
}

h1,
h2,
h3 {
  line-height: 40px;
  font-weight:bold;
}

.svg {
    height: auto;
}

.reveal-animation {
    position: absolute;
    width: 97%;
}

.slider {
    background-color: white;
}

.slider-slide {
    background-color: white;
}

.slider-pager {
    bottom: auto;
    top: 15px;
}

.nav-collapse {
    background: rgb(235, 235, 235);
    z-index: 1000;
}

#loading-bar .bar {
    height: 4px;
    border: none;
}

.disable-select {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.ngFooterPanel {
    background-color: rgba(180, 207, 213, 0.46);
}

.form-horizontal input.ng-invalid.ng-dirty {
    background-color: #FA787E;
}

.form-horizontal input.ng-valid.ng-dirty {
    background-color: #78FA89;
}

.center {
    float: none;
    margin-left: auto;
    margin-right: auto;
}

.navbar .brand {
    max-height: 40px;
    overflow: visible;
    padding-top: 10px;
    padding-bottom: 0;
}

.navbar .container-fluid {
    height: 5em;
}

.navbar .nav > li > a {
  float: none;
  padding: 10px 15px 10px;
  color: #777777;
  text-decoration: none;
  text-shadow: 0 1px 0 #ffffff;
  padding: 2em 15px 10px;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-right: 2px;
  line-height: 14px;
}

.nav-pills > .active > a,
.nav-pills > .active > a:hover {
    text-decoration: none;
    font-weight: bold;
    border-radius: 0px;
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: #FF6600;
    color: #000 !important;
    background-color: transparent !important;
}

.navbar .nav li.dropdown.open > .dropdown-toggle,
.navbar .nav li.dropdown.active > .dropdown-toggle,
.navbar .nav li.dropdown.open.active > .dropdown-toggle,
.nav-pills > li > a:hover {
    text-decoration: none;
    font-weight: bold;
    border-radius: 0px;
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: lightblue;
    color: #000 !important;
    background-color: transparent !important;
}

.nav-pills > li > a {
    border-radius: 0px;
}

.navbar-nav > .active > a,
.navbar-nav > .active > a:hover {
    text-decoration: none;
    font-weight: bold;
    border-radius: 0px;
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: #FF6600;
    color: #000 !important;
    background-color: transparent !important;
    webkit-box-shadow: inset 0 3px 8px rgba(0,0,0,.125);
    -moz-box-shadow: inset 0 3px 8px rgba(0,0,0,.125);
    box-shadow: inset 0 3px 8px rgba(0,0,0,.125);
}
.navbar-nav > li > a:hover {
    text-decoration: none;
    font-weight: bold;
    border-radius: 0px;
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: lightblue;
    color: #000 !important;
    background-color: transparent !important;
}
.navbar-nav > li > a {
    border-radius: 0px;
}

.language-icon {
    cursor: pointer;
}

.rn-carousel-container {
    margin: 0 auto;
}

.carouselImages {
    width: 290px;
    height: 250px;
    text-align: center;
}

.carouselImage {
    margin-left: auto;
    margin-right: auto;
}

#footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background: #B1BDCC;
    padding: 1em;
    z-index:3;
}

    #footer a {
        color: rgb(124, 149, 162);
        text-decoration: none;
    }

    #footer .cloud-link {
        float: right;
    }

.dialog-underline {
    text-decoration: none;
    font-weight: bold;
    border-radius: 0px;
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: red;
    color: #000 !important;
    background-color: transparent !important;
}

.slide-animation {
  width: 100%;
  position: absolute;
}

.slide-animation.ng-enter {
  animation: slideInRight 0.8s;
  -webkit-animation: slideInRight 0.8s;
  -moz-animation: slideInRight 0.8s;
  -ms-animation: slideInRight 0.8s;
}

.slide-animation.ng-leave {
  animation: slideOutLeft 0.8s;
  -webkit-animation: slideOutLeft 0.8s;
  -moz-animation: slideOutLeft 0.8s;
  -ms-animation: slideOutLeft 0.8s;
}

.inner {
  min-height: 40px;
  background-color: #fafafa;
  background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
  background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
  background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
  background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
  border: 1px solid #d4d4d4;
  /*-webkit-border-radius: 4px;*/
  /*-moz-border-radius: 4px;*/
  /*border-radius: 4px;*/
  /*-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);*/
  /*-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);*/
  /*box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);*/
  *zoom: 1;

  border-width: 0 0 1px;

  padding-left: 0;
  padding-right: 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;

  -webkit-box-shadow: 0 1px 10px rgba(0,0,0,.1);
  -moz-box-shadow: 0 1px 10px rgba(0,0,0,.1);
  box-shadow: 0 1px 10px rgba(0,0,0,.1);
}
.inner:before,
.inner:after {
  display: table;
  content: "";
  line-height: 0;
}
.inner:after {
    clear: both;
}
.navbar-collapse.collapse
{
    background-color:transparent;
}
.navbar-collapse.in {
   background-color:rgb(235, 235, 235);
}
.navbar-brand
{
    float: left;
    display: block;
    padding: 10px 20px 10px;
    margin-left: -20px;
    font-size: 20px;
    font-weight: 200;
    color: #777777;
    text-shadow: 0 1px 0 #ffffff;
}
.form-actions {
    padding: 19px 20px 20px;
    margin-top: 20px;
    margin-bottom: 20px;
    background-color: #f5f5f5;
    border-top: 1px solid #e5e5e5;
}

